--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,11 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
-wasm-bindgen = "0.2.63"
+wasm-bindgen =  { version = "0.2", features = ["serde-serialize"] }
 
+serde_json = "1.0.32"
+serde_derive = "1.0.80"
+serde = "1.0.80"
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
