--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ default = ["console_error_panic_hook"]
 [dependencies]
 wasm-bindgen =  { version = "0.2", features = ["serde-serialize"] }
 
+js-sys = "0.3"
 serde_json = "1.0.32"
 serde_derive = "1.0.80"
 serde = "1.0.80"
