--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,4 +35,6 @@ wasm-bindgen-test = "0.3.13"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
-opt-level = "s"
+lto = true
+opt-level = 3
+codegen-units = 1
