--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ authors = ["IWANABETHATGUY <974153916@qq.com>"]
 edition = "2018"
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = [ "rlib"]
+# crate-type = ["cdylib", "rlib"]
 
 [features]
 default = ["console_error_panic_hook"]
@@ -37,4 +38,3 @@ wasm-bindgen-test = "0.3.13"
 # Tell `rustc` to optimize for small code size.
 lto = true
 opt-level = 3
-codegen-units = 1
