--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,7 @@ authors = ["IWANABETHATGUY <974153916@qq.com>"]
 edition = "2018"
 
 [lib]
-crate-type = [ "rlib"]
-# crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib", "rlib"]
 
 [features]
 default = ["console_error_panic_hook"]
@@ -15,9 +14,6 @@ default = ["console_error_panic_hook"]
 wasm-bindgen =  { version = "0.2", features = ["serde-serialize"] }
 
 js-sys = "0.3"
-serde_json = "1.0.32"
-serde_derive = "1.0.80"
-serde = "1.0.80"
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
@@ -35,6 +31,6 @@ wee_alloc = { version = "0.4.5", optional = true }
 wasm-bindgen-test = "0.3.13"
 
 [profile.release]
-# Tell `rustc` to optimize for small code size.
 lto = true
 opt-level = 3
+# Tell `rustc` to optimize for small code size.
